# second_brain_obsidian

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SECOND_BRAIN_ARCHITECTURE.md  WORKING AGENT.md  alma.md  config.yaml  docker-compose.yml
launchd/: com.alejandrogarcia.secondbrain.nightly.plist
worker/: Dockerfile  config.yaml  pyproject.toml
worker/src/: __init__.py  agents_md_builder.py  cli.py  config.py  digestor.py  fact_checker.py  git_safety.py  llm_router.py  manifest.py  markers.py  recap.py  reorganizer.py  report.py  vault_io.py  vector_store.py  worktree.py
worker/src/jobs/: __init__.py  nightly_run.py
worker/tests/: test_agents_md_builder.py  test_cli.py  test_config.py  test_digestor.py  test_fact_checker.py  test_git_safety.py  test_llm_router.py  test_manifest.py  test_markers.py  test_nightly_run.py  test_recap.py  test_reorganizer.py  test_report.py  test_vault_io.py  test_vector_store.py  test_worktree.py
