[project]
name = "second-brain-worker"
version = "0.1.0"
description = "Nightly curation pipeline for a personal Obsidian vault."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "GitPython>=3.1",
    "lancedb>=0.13",
    "pyarrow>=14.0",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
